--- a/My05_multi_component2/src/app/people/people.component.html
+++ b/My05_multi_component2/src/app/people/people.component.html
@@ -7,7 +7,8 @@
     <td>{{p.salary}}</td>
     <td>
         <a routerLink="/person/{{p.id}}">Детали</a>
-
+        <!-- или так-->
+        <a [routerLink]="'/person/' + p.id.toString()">Детали</a>
     </td>
 </tr>
 </table>
