--- a/My03_Calc/src/app/app.component.html
+++ b/My03_Calc/src/app/app.component.html
@@ -1,8 +1,9 @@
 
 <a routerLink="/calc1">Калькулятор 1</a> <br/>
 <a routerLink="/calc2">Калькулятор 2</a> <br/>
-<a routerLink="/calc3">Калькулятор 3</a> <br/>
-<a routerLink="/counter">Счетчик</a> <br/>
+<!-- а можно и так -->
+<a [routerLink]="'/calc3'">Калькулятор 3</a> <br/>
+<a href="/counter">Счетчик</a> <br/>
 
 <router-outlet></router-outlet>
  
