--- a/My03_Calc/src/app/calc3/calc1.component.html
+++ b/My03_Calc/src/app/calc3/calc1.component.html
@@ -9,4 +9,6 @@
                 [ngClass]="{'pressed': operation == 3}">-</button>
     </div>
     <input value="{{result}}"/>
+    <!-- а можно и так -->
+    <input [value]="result" />
 </div>
