--- a/My02_Basics/src/app/time/time.component.html
+++ b/My02_Basics/src/app/time/time.component.html
@@ -1,3 +1,3 @@
 <p>time works!</p>
-<p>Page opened at {{now}}</p>
+<p>Page opened at {{now | date:"HH:mm:SS"}}</p>
 <img src="assets/images/cat.jpg" id="cat"/>
