--- a/My07_WebAPI_client/src/app/app.component.html
+++ b/My07_WebAPI_client/src/app/app.component.html
@@ -1,2 +1,4 @@
 <h1>Web Api Demo</h1>
-Курс доллара: {{usdRate}}
+Курс доллара: {{usdRate}} <br />
+Температура в Москве в {{weatherData.time | date: "HH:mm:ss"}}: 
+        {{weatherData.temperature}} градусов
