--- a/My02_Basics/src/app/app.component.html
+++ b/My02_Basics/src/app/app.component.html
@@ -2,8 +2,9 @@
 
 <div class="nav-bar">
   <a routerLink="/time">Текущее время</a>
+  <a routerLink="/people">Список сотрудников</a>
   <!--можно и просто так-->
-  <a href="/people">Список сотрудников</a>
+  <a href="people">Список сотрудников (href)</a>
 </div>
 
 <router-outlet></router-outlet>
