--- a/My08_material_tests/src/app/app.component.html
+++ b/My08_material_tests/src/app/app.component.html
@@ -1,1 +1,18 @@
-<h1>Material</h1>
+<h1>Material gui lib demo</h1>
+<h2>Demo material accordion</h2>
+<mat-accordion>
+    <mat-expansion-panel>
+        <mat-expansion-panel-header>Панель 1</mat-expansion-panel-header>
+        Содержимое панели 1
+    </mat-expansion-panel>
+
+    <mat-expansion-panel>
+        <mat-expansion-panel-header>Панель 2</mat-expansion-panel-header>
+        Содержимое панели 2
+    </mat-expansion-panel>
+
+    <mat-expansion-panel>
+        <mat-expansion-panel-header>Панель 3</mat-expansion-panel-header>
+        Содержимое панели 3
+    </mat-expansion-panel>
+</mat-accordion>
